// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`com.mgmtp.a12.widgets.input.month-selector > rendering disabled month selector 1`] = `
.c1 {
  box-sizing: border-box;
  flex-grow: 1;
  width: 100%;
}

.c4 {
  appearance: none;
  border-width: medium;
  border-style: none;
  border-color: currentcolor;
  border-image: initial;
  border-radius: 0px;
  caret-color: transparent;
  color: inherit;
  font-size: inherit;
  flex-grow: 1;
  font-style: inherit;
  font-weight: inherit;
  font-family: inherit;
  height: 100%;
  padding: 0px 32px 0px 12px;
  text-align: inherit;
  text-transform: inherit;
  width: 100%;
  background-color: inherit;
  cursor: default;
  opacity: 1;
}

.c4.c4.c4 {
  outline: transparent solid 1px;
}

.c4::selection {
  background-color: transparent;
}

.c4::placeholder {
  font-style: italic;
  color: rgb(89, 102, 115);
  opacity: 1;
}

.c0[class*="h_"] .c4.c4 {
  background-color: inherit !important;
}

.c2 {
  background-color: transparent;
  box-shadow: none;
  border-width: medium;
  border-style: none;
  border-color: currentcolor;
  border-image: initial;
  border-radius: 0px;
  color: rgb(77, 77, 77);
  display: flex;
  font-family: "Open Sans", sans-serif;
  font-size: 0.75rem;
  font-weight: 400;
  height: 32px;
}

.c2:focus {
  outline: none;
}

.c3 {
  border-radius: inherit;
  display: flex;
  flex-grow: 1;
  position: relative;
  background-color: rgb(226, 230, 233);
  box-shadow: rgb(169, 179, 188) 0px 1px 0px 0px;
  color: rgb(169, 179, 188);
}

.c6::after {
  align-items: center;
  color: rgb(169, 179, 188);
  content: "";
  display: flex;
  font-family: "Material Symbols Outlined";
  font-variation-settings: "FILL" 1, "wght" 400, "GRAD" 0, "opsz" 24;
  font-size: 1.5rem;
  font-style: normal;
  justify-content: center;
  height: 100%;
  line-height: 0;
  pointer-events: none;
  position: absolute;
  right: 0px;
  text-transform: none;
  top: 50%;
  transform: translateY(-50%);
  width: 32px;
  overflow-wrap: normal;
}

.c5 {
  appearance: none;
  font-style: normal;
  color: rgb(77, 77, 77);
  font-size: inherit;
}

.c5:focus {
  border-width: medium;
  border-style: none;
  border-color: currentcolor;
  border-image: initial;
}

@media (pointer: coarse) {
  .c5:active {
    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
    background-color: rgb(213, 0, 117);
    color: rgb(255, 255, 255);
  }
}

@media (pointer: fine) {
  .c5:hover {
    background-color: rgb(213, 0, 117);
    color: rgb(255, 255, 255);
  }
}

<div
  class="c0 c1 field field--block month-selector"
  data-role="month-selector"
>
  <div
    class="c2 field__select field__select--disabled"
    data-disabled="true"
    data-role="month-selector-control"
  >
    <div
      class="c3 field__select-wrapper"
      data-disabled="true"
      data-role="month-selector-wrapper"
    >
      <select
        class="c4 field__selectTitle"
        data-role="month-selector-input"
        disabled=""
      >
        <option
          class="c5 field__selectOption"
          data-role="month-selector-option"
          value="0"
        >
          January
        </option>
        <option
          class="c5 field__selectOption"
          data-role="month-selector-option"
          value="1"
        >
          February
        </option>
        <option
          class="c5 field__selectOption"
          data-role="month-selector-option"
          value="2"
        >
          March
        </option>
        <option
          class="c5 field__selectOption"
          data-role="month-selector-option"
          value="3"
        >
          April
        </option>
        <option
          class="c5 field__selectOption"
          data-role="month-selector-option"
          value="4"
        >
          May
        </option>
        <option
          class="c5 field__selectOption"
          data-role="month-selector-option"
          value="5"
        >
          June
        </option>
        <option
          class="c5 field__selectOption"
          data-role="month-selector-option"
          value="6"
        >
          July
        </option>
        <option
          class="c5 field__selectOption"
          data-role="month-selector-option"
          value="7"
        >
          August
        </option>
        <option
          class="c5 field__selectOption"
          data-role="month-selector-option"
          value="8"
        >
          September
        </option>
        <option
          class="c5 field__selectOption"
          data-role="month-selector-option"
          value="9"
        >
          October
        </option>
        <option
          class="c5 field__selectOption"
          data-role="month-selector-option"
          value="10"
        >
          November
        </option>
        <option
          class="c5 field__selectOption"
          data-role="month-selector-option"
          value="11"
        >
          December
        </option>
      </select>
      <span
        aria-hidden="true"
        class="c6 field__select-arrow"
      />
    </div>
  </div>
</div>
`;

exports[`com.mgmtp.a12.widgets.input.month-selector > rendering month selector 1`] = `
.c2 {
  color: rgb(77, 77, 77);
  display: inline-block;
  font-family: "Open Sans", sans-serif;
  font-size: 0.75rem;
  font-weight: 600;
  line-height: 1.45;
  text-transform: none;
  margin: 0px 0px 4px;
  align-self: center;
}

.c2:empty {
  display: none;
}

.c0 {
  box-sizing: border-box;
  flex-grow: 1;
  width: 100%;
}

.c0 .c1 {
  display: block;
  width: fit-content;
}

.c5 {
  appearance: none;
  background-color: inherit;
  border-width: medium;
  border-style: none;
  border-color: currentcolor;
  border-image: initial;
  border-radius: 0px;
  caret-color: transparent;
  color: inherit;
  font-size: inherit;
  flex-grow: 1;
  font-style: inherit;
  font-weight: inherit;
  font-family: inherit;
  height: 100%;
  padding: 0px 32px 0px 12px;
  text-align: inherit;
  text-transform: inherit;
  width: 100%;
  cursor: pointer;
}

.c5.c5.c5 {
  outline: transparent solid 1px;
}

.c5::selection {
  background-color: transparent;
}

.c5::placeholder {
  font-style: italic;
  color: rgb(89, 102, 115);
  opacity: 1;
}

.c3 {
  background-color: transparent;
  box-shadow: none;
  border-width: medium;
  border-style: none;
  border-color: currentcolor;
  border-image: initial;
  border-radius: 0px;
  color: rgb(77, 77, 77);
  display: flex;
  font-family: "Open Sans", sans-serif;
  font-size: 0.75rem;
  font-weight: 400;
  height: 32px;
}

.c3:focus {
  outline: none;
}

.c4 {
  background-color: rgb(241, 242, 244);
  border-radius: inherit;
  box-shadow: rgb(89, 102, 115) 0px 1px 0px 0px;
  display: flex;
  flex-grow: 1;
  position: relative;
}

.c4:focus-within {
  box-shadow: rgb(213, 0, 117) 0px 2px 0px 0px;
  outline-offset: 0px;
  outline: rgb(51, 51, 51) dotted 1px;
}

.c7::after {
  align-items: center;
  color: rgb(127, 140, 155);
  content: "";
  display: flex;
  font-family: "Material Symbols Outlined";
  font-variation-settings: "FILL" 1, "wght" 400, "GRAD" 0, "opsz" 24;
  font-size: 1.5rem;
  font-style: normal;
  justify-content: center;
  height: 100%;
  line-height: 0;
  pointer-events: none;
  position: absolute;
  right: 0px;
  text-transform: none;
  top: 50%;
  transform: translateY(-50%);
  width: 32px;
  overflow-wrap: normal;
}

.c6 {
  appearance: none;
  font-style: normal;
  color: rgb(77, 77, 77);
  font-size: inherit;
}

.c6:focus {
  border-width: medium;
  border-style: none;
  border-color: currentcolor;
  border-image: initial;
}

@media (pointer: coarse) {
  .c4:active {
    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
    box-shadow: rgb(213, 0, 117) 0px 2px 0px 0px;
  }
}

@media (pointer: fine) {
  .c4:hover {
    box-shadow: rgb(213, 0, 117) 0px 2px 0px 0px;
  }
}

@media (pointer: coarse) {
  .c6:active {
    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
    background-color: rgb(213, 0, 117);
    color: rgb(255, 255, 255);
  }
}

@media (pointer: fine) {
  .c6:hover {
    background-color: rgb(213, 0, 117);
    color: rgb(255, 255, 255);
  }
}

<div
  class="c0 field field--block month-selector month-selector-class"
  data-role="month-selector"
  style="background: red;"
>
  <label
    class="c1 c2 label field__label"
    data-role="month-selector-label"
    for="month-selector"
    id="month-selector-label"
  >
    Test Month Selector
  </label>
  <div
    class="c3 field__select"
    data-role="month-selector-control"
  >
    <div
      class="c4 field__select-wrapper"
      data-role="month-selector-wrapper"
    >
      <select
        class="c5 field__selectTitle"
        data-role="month-selector-input"
        id="month-selector"
      >
        <option
          class="c6 field__selectOption"
          data-role="month-selector-option"
          value="0"
        >
          January
        </option>
        <option
          class="c6 field__selectOption"
          data-role="month-selector-option"
          value="1"
        >
          February
        </option>
        <option
          class="c6 field__selectOption"
          data-role="month-selector-option"
          value="2"
        >
          March
        </option>
        <option
          class="c6 field__selectOption"
          data-role="month-selector-option"
          value="3"
        >
          April
        </option>
        <option
          class="c6 field__selectOption"
          data-role="month-selector-option"
          value="4"
        >
          May
        </option>
        <option
          class="c6 field__selectOption"
          data-role="month-selector-option"
          value="5"
        >
          June
        </option>
        <option
          class="c6 field__selectOption"
          data-role="month-selector-option"
          value="6"
        >
          July
        </option>
        <option
          class="c6 field__selectOption"
          data-role="month-selector-option"
          value="7"
        >
          August
        </option>
        <option
          class="c6 field__selectOption"
          data-role="month-selector-option"
          value="8"
        >
          September
        </option>
        <option
          class="c6 field__selectOption"
          data-role="month-selector-option"
          value="9"
        >
          October
        </option>
        <option
          class="c6 field__selectOption"
          data-role="month-selector-option"
          value="10"
        >
          November
        </option>
        <option
          class="c6 field__selectOption"
          data-role="month-selector-option"
          value="11"
        >
          December
        </option>
      </select>
      <span
        aria-hidden="true"
        class="c7 field__select-arrow"
      />
    </div>
  </div>
</div>
`;

exports[`com.mgmtp.a12.widgets.input.month-selector > rendering readonly month selector 1`] = `
.c1 {
  box-sizing: border-box;
  flex-grow: 1;
  width: 100%;
}

.c0[class*="h_"] .c7.c7 {
  background-color: inherit !important;
}

.c4 {
  appearance: none;
  background-color: inherit;
  border-width: medium;
  border-style: none;
  border-color: currentcolor;
  border-image: initial;
  border-radius: 0px;
  caret-color: transparent;
  color: inherit;
  font-size: inherit;
  flex-grow: 1;
  font-style: inherit;
  font-weight: inherit;
  font-family: inherit;
  height: 100%;
  padding: 0px 32px 0px 12px;
  text-align: inherit;
  text-transform: inherit;
  width: 100%;
  margin: 0px;
  min-width: 5px;
  cursor: default;
  opacity: 1;
}

.c4.c4.c4 {
  outline: transparent solid 1px;
}

.c4::selection {
  background-color: transparent;
}

.c4::placeholder {
  font-style: italic;
  color: rgb(89, 102, 115);
  opacity: 1;
}

.c2 {
  background-color: transparent;
  box-shadow: none;
  border-width: medium;
  border-style: none;
  border-color: currentcolor;
  border-image: initial;
  border-radius: 0px;
  color: rgb(77, 77, 77);
  display: flex;
  font-family: "Open Sans", sans-serif;
  font-size: 0.75rem;
  font-weight: 400;
  height: 32px;
  cursor: default;
  min-width: 5px;
}

.c2:focus {
  outline: none;
}

.c3 {
  border-radius: inherit;
  display: flex;
  flex-grow: 1;
  position: relative;
  background-color: rgb(241, 242, 244);
  box-shadow: none;
}

.c6::after {
  align-items: center;
  color: rgb(127, 140, 155);
  content: "";
  display: none;
  font-family: "Material Symbols Outlined";
  font-variation-settings: "FILL" 1, "wght" 400, "GRAD" 0, "opsz" 24;
  font-size: 1.5rem;
  font-style: normal;
  justify-content: center;
  height: 100%;
  line-height: 0;
  pointer-events: none;
  position: absolute;
  right: 0px;
  text-transform: none;
  top: 50%;
  transform: translateY(-50%);
  width: 32px;
  overflow-wrap: normal;
}

.c5 {
  appearance: none;
  font-style: normal;
  color: rgb(77, 77, 77);
  font-size: inherit;
}

.c5:focus {
  border-width: medium;
  border-style: none;
  border-color: currentcolor;
  border-image: initial;
}

@media (pointer: coarse) {
  .c5:active {
    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
    background-color: rgb(213, 0, 117);
    color: rgb(255, 255, 255);
  }
}

@media (pointer: fine) {
  .c5:hover {
    background-color: rgb(213, 0, 117);
    color: rgb(255, 255, 255);
  }
}

<div
  class="c0 c1 field field--block month-selector"
  data-role="month-selector"
>
  <div
    class="c2 field__select field__select--readonly"
    data-role="month-selector-control"
  >
    <div
      class="c3 field__select-wrapper"
      data-readonly="true"
      data-role="month-selector-wrapper"
    >
      <select
        class="c4 field__selectTitle"
        data-role="month-selector-input"
        disabled=""
      >
        <option
          class="c5 field__selectOption"
          data-role="month-selector-option"
          value="0"
        >
          January
        </option>
        <option
          class="c5 field__selectOption"
          data-role="month-selector-option"
          value="1"
        >
          February
        </option>
        <option
          class="c5 field__selectOption"
          data-role="month-selector-option"
          value="2"
        >
          March
        </option>
        <option
          class="c5 field__selectOption"
          data-role="month-selector-option"
          value="3"
        >
          April
        </option>
        <option
          class="c5 field__selectOption"
          data-role="month-selector-option"
          value="4"
        >
          May
        </option>
        <option
          class="c5 field__selectOption"
          data-role="month-selector-option"
          value="5"
        >
          June
        </option>
        <option
          class="c5 field__selectOption"
          data-role="month-selector-option"
          value="6"
        >
          July
        </option>
        <option
          class="c5 field__selectOption"
          data-role="month-selector-option"
          value="7"
        >
          August
        </option>
        <option
          class="c5 field__selectOption"
          data-role="month-selector-option"
          value="8"
        >
          September
        </option>
        <option
          class="c5 field__selectOption"
          data-role="month-selector-option"
          value="9"
        >
          October
        </option>
        <option
          class="c5 field__selectOption"
          data-role="month-selector-option"
          value="10"
        >
          November
        </option>
        <option
          class="c5 field__selectOption"
          data-role="month-selector-option"
          value="11"
        >
          December
        </option>
      </select>
      <span
        aria-hidden="true"
        class="c6 field__select-arrow"
      />
    </div>
  </div>
</div>
`;

exports[`com.mgmtp.a12.widgets.input.month-selector > rendering with allow optional value 1`] = `
.c3 {
  color: rgb(77, 77, 77);
  display: inline-block;
  font-family: "Open Sans", sans-serif;
  font-size: 0.75rem;
  font-weight: 600;
  line-height: 1.45;
  text-transform: none;
  margin: 0px 0px 4px;
  align-self: center;
}

.c3:empty {
  display: none;
}

.c1 {
  box-sizing: border-box;
  flex-grow: 1;
  width: 100%;
}

.c1 .c2 {
  display: block;
  width: fit-content;
}

.c9 .c2 {
  display: block;
  width: fit-content;
}

.c9[class*="h_"] .c2 {
  color: rgb(169, 179, 188) !important;
}

.c10[data-role="checkbox-group"] .c2,
.c10[data-role="radio-group"] .c2,
.c10[data-role="file-upload"] .c2 {
  max-width: 100%;
  vertical-align: middle;
}

.c6 {
  appearance: none;
  background-color: inherit;
  border-width: medium;
  border-style: none;
  border-color: currentcolor;
  border-image: initial;
  border-radius: 0px;
  caret-color: transparent;
  color: inherit;
  font-size: inherit;
  flex-grow: 1;
  font-style: inherit;
  font-weight: inherit;
  font-family: inherit;
  height: 100%;
  padding: 0px 32px 0px 12px;
  text-align: inherit;
  text-transform: inherit;
  width: 100%;
  cursor: pointer;
}

.c6.c6.c6 {
  outline: transparent solid 1px;
}

.c6::selection {
  background-color: transparent;
}

.c6::placeholder {
  font-style: italic;
  color: rgb(89, 102, 115);
  opacity: 1;
}

.c0[class*="h_"] .c11.c11 {
  background-color: inherit !important;
}

.c4 {
  background-color: transparent;
  box-shadow: none;
  border-width: medium;
  border-style: none;
  border-color: currentcolor;
  border-image: initial;
  border-radius: 0px;
  color: rgb(77, 77, 77);
  display: flex;
  font-family: "Open Sans", sans-serif;
  font-size: 0.75rem;
  font-weight: 400;
  height: 32px;
}

.c4:focus {
  outline: none;
}

.c5 {
  background-color: rgb(241, 242, 244);
  border-radius: inherit;
  box-shadow: rgb(89, 102, 115) 0px 1px 0px 0px;
  display: flex;
  flex-grow: 1;
  position: relative;
}

.c5:focus-within {
  box-shadow: rgb(213, 0, 117) 0px 2px 0px 0px;
  outline-offset: 0px;
  outline: rgb(51, 51, 51) dotted 1px;
}

.c8::after {
  align-items: center;
  color: rgb(127, 140, 155);
  content: "";
  display: flex;
  font-family: "Material Symbols Outlined";
  font-variation-settings: "FILL" 1, "wght" 400, "GRAD" 0, "opsz" 24;
  font-size: 1.5rem;
  font-style: normal;
  justify-content: center;
  height: 100%;
  line-height: 0;
  pointer-events: none;
  position: absolute;
  right: 0px;
  text-transform: none;
  top: 50%;
  transform: translateY(-50%);
  width: 32px;
  overflow-wrap: normal;
}

.c7 {
  appearance: none;
  font-style: normal;
  color: rgb(77, 77, 77);
  font-size: inherit;
}

.c7:focus {
  border-width: medium;
  border-style: none;
  border-color: currentcolor;
  border-image: initial;
}

@media (pointer: coarse) {
  .c5:active {
    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
    box-shadow: rgb(213, 0, 117) 0px 2px 0px 0px;
  }
}

@media (pointer: fine) {
  .c5:hover {
    box-shadow: rgb(213, 0, 117) 0px 2px 0px 0px;
  }
}

@media (pointer: coarse) {
  .c7:active {
    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
    background-color: rgb(213, 0, 117);
    color: rgb(255, 255, 255);
  }
}

@media (pointer: fine) {
  .c7:hover {
    background-color: rgb(213, 0, 117);
    color: rgb(255, 255, 255);
  }
}

<div
  class="c0 c1 field field--block month-selector"
  data-role="month-selector"
>
  <label
    class="c2 c3 label field__label"
    data-role="month-selector-label"
  >
    Test Month Selector
  </label>
  <div
    class="c4 field__select"
    data-role="month-selector-control"
  >
    <div
      class="c5 field__select-wrapper"
      data-role="month-selector-wrapper"
    >
      <select
        class="c6 field__selectTitle"
        data-role="month-selector-input"
      >
        <option
          class="c7 field__selectOption"
          data-role="month-selector-option"
        >
          additional Item
        </option>
        <option
          class="c7 field__selectOption"
          data-role="month-selector-option"
          value="0"
        >
          January
        </option>
        <option
          class="c7 field__selectOption"
          data-role="month-selector-option"
          value="1"
        >
          February
        </option>
        <option
          class="c7 field__selectOption"
          data-role="month-selector-option"
          value="2"
        >
          March
        </option>
        <option
          class="c7 field__selectOption"
          data-role="month-selector-option"
          value="3"
        >
          April
        </option>
        <option
          class="c7 field__selectOption"
          data-role="month-selector-option"
          value="4"
        >
          May
        </option>
        <option
          class="c7 field__selectOption"
          data-role="month-selector-option"
          value="5"
        >
          June
        </option>
        <option
          class="c7 field__selectOption"
          data-role="month-selector-option"
          value="6"
        >
          July
        </option>
        <option
          class="c7 field__selectOption"
          data-role="month-selector-option"
          value="7"
        >
          August
        </option>
        <option
          class="c7 field__selectOption"
          data-role="month-selector-option"
          value="8"
        >
          September
        </option>
        <option
          class="c7 field__selectOption"
          data-role="month-selector-option"
          value="9"
        >
          October
        </option>
        <option
          class="c7 field__selectOption"
          data-role="month-selector-option"
          value="10"
        >
          November
        </option>
        <option
          class="c7 field__selectOption"
          data-role="month-selector-option"
          value="11"
        >
          December
        </option>
      </select>
      <span
        aria-hidden="true"
        class="c8 field__select-arrow"
      />
    </div>
  </div>
</div>
`;

exports[`com.mgmtp.a12.widgets.input.month-selector > rendering with custom month names 1`] = `
.c1 {
  box-sizing: border-box;
  flex-grow: 1;
  width: 100%;
}

.c4 {
  appearance: none;
  background-color: inherit;
  border-width: medium;
  border-style: none;
  border-color: currentcolor;
  border-image: initial;
  border-radius: 0px;
  caret-color: transparent;
  color: inherit;
  font-size: inherit;
  flex-grow: 1;
  font-style: inherit;
  font-weight: inherit;
  font-family: inherit;
  height: 100%;
  padding: 0px 32px 0px 12px;
  text-align: inherit;
  text-transform: inherit;
  width: 100%;
  cursor: pointer;
}

.c4.c4.c4 {
  outline: transparent solid 1px;
}

.c4::selection {
  background-color: transparent;
}

.c4::placeholder {
  font-style: italic;
  color: rgb(89, 102, 115);
  opacity: 1;
}

.c0[class*="h_"] .c7.c7 {
  background-color: inherit !important;
}

.c2 {
  background-color: transparent;
  box-shadow: none;
  border-width: medium;
  border-style: none;
  border-color: currentcolor;
  border-image: initial;
  border-radius: 0px;
  color: rgb(77, 77, 77);
  display: flex;
  font-family: "Open Sans", sans-serif;
  font-size: 0.75rem;
  font-weight: 400;
  height: 32px;
}

.c2:focus {
  outline: none;
}

.c3 {
  background-color: rgb(241, 242, 244);
  border-radius: inherit;
  box-shadow: rgb(89, 102, 115) 0px 1px 0px 0px;
  display: flex;
  flex-grow: 1;
  position: relative;
}

.c3:focus-within {
  box-shadow: rgb(213, 0, 117) 0px 2px 0px 0px;
  outline-offset: 0px;
  outline: rgb(51, 51, 51) dotted 1px;
}

.c6::after {
  align-items: center;
  color: rgb(127, 140, 155);
  content: "";
  display: flex;
  font-family: "Material Symbols Outlined";
  font-variation-settings: "FILL" 1, "wght" 400, "GRAD" 0, "opsz" 24;
  font-size: 1.5rem;
  font-style: normal;
  justify-content: center;
  height: 100%;
  line-height: 0;
  pointer-events: none;
  position: absolute;
  right: 0px;
  text-transform: none;
  top: 50%;
  transform: translateY(-50%);
  width: 32px;
  overflow-wrap: normal;
}

.c5 {
  appearance: none;
  font-style: normal;
  color: rgb(77, 77, 77);
  font-size: inherit;
}

.c5:focus {
  border-width: medium;
  border-style: none;
  border-color: currentcolor;
  border-image: initial;
}

@media (pointer: coarse) {
  .c3:active {
    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
    box-shadow: rgb(213, 0, 117) 0px 2px 0px 0px;
  }
}

@media (pointer: fine) {
  .c3:hover {
    box-shadow: rgb(213, 0, 117) 0px 2px 0px 0px;
  }
}

@media (pointer: coarse) {
  .c5:active {
    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
    background-color: rgb(213, 0, 117);
    color: rgb(255, 255, 255);
  }
}

@media (pointer: fine) {
  .c5:hover {
    background-color: rgb(213, 0, 117);
    color: rgb(255, 255, 255);
  }
}

<div
  class="c0 c1 field field--block month-selector"
  data-role="month-selector"
>
  <div
    class="c2 field__select"
    data-role="month-selector-control"
  >
    <div
      class="c3 field__select-wrapper"
      data-role="month-selector-wrapper"
    >
      <select
        class="c4 field__selectTitle"
        data-role="month-selector-input"
      >
        <option
          class="c5 field__selectOption"
          data-role="month-selector-option"
          value="0"
        >
          jan
        </option>
        <option
          class="c5 field__selectOption"
          data-role="month-selector-option"
          value="1"
        >
          feb
        </option>
        <option
          class="c5 field__selectOption"
          data-role="month-selector-option"
          value="2"
        >
          mar
        </option>
        <option
          class="c5 field__selectOption"
          data-role="month-selector-option"
          value="3"
        >
          apr
        </option>
        <option
          class="c5 field__selectOption"
          data-role="month-selector-option"
          value="4"
        >
          may
        </option>
        <option
          class="c5 field__selectOption"
          data-role="month-selector-option"
          value="5"
        >
          jun
        </option>
        <option
          class="c5 field__selectOption"
          data-role="month-selector-option"
          value="6"
        >
          jul
        </option>
        <option
          class="c5 field__selectOption"
          data-role="month-selector-option"
          value="7"
        >
          aug
        </option>
        <option
          class="c5 field__selectOption"
          data-role="month-selector-option"
          value="8"
        >
          sep
        </option>
        <option
          class="c5 field__selectOption"
          data-role="month-selector-option"
          value="9"
        >
          oct
        </option>
        <option
          class="c5 field__selectOption"
          data-role="month-selector-option"
          value="10"
        >
          nov
        </option>
        <option
          class="c5 field__selectOption"
          data-role="month-selector-option"
          value="11"
        >
          dec
        </option>
      </select>
      <span
        aria-hidden="true"
        class="c6 field__select-arrow"
      />
    </div>
  </div>
</div>
`;

exports[`com.mgmtp.a12.widgets.input.month-selector > rendering with error and warning messages 1`] = `
.c7 {
  border: 0px;
  clip: rect(0px, 0px, 0px, 0px);
  clip-path: inset(100%);
  height: 1px;
  min-height: 1px;
  overflow: hidden;
  padding: 0px;
  position: absolute;
  top: 0px;
  width: 1px;
  margin: -1px !important;
}

.c7 * {
  width: 1px;
  height: 1px;
}

.c10 {
  box-sizing: border-box;
  color: rgb(127, 140, 155);
  display: inline-block;
  direction: ltr;
  font-family: "Material Symbols Outlined";
  font-variation-settings: "FILL" 1, "wght" 400, "GRAD" 0, "opsz" 24;
  font-size: 1rem;
  font-style: normal;
  font-weight: 400;
  letter-spacing: normal;
  line-height: 1;
  text-transform: none;
  white-space: nowrap;
  overflow-wrap: normal;
  -webkit-font-smoothing: antialiased;
  text-rendering: optimizelegibility;
  font-feature-settings: "liga";
}

.c10 > span {
  display: inline-block;
}

.c10.c10 {
  max-width: unset;
}

.c5 {
  box-sizing: border-box;
  color: rgb(127, 140, 155);
  display: inline-block;
  direction: ltr;
  font-family: custom-icons;
  font-variation-settings: normal;
  font-size: 1rem;
  font-style: normal;
  font-weight: 400;
  letter-spacing: normal;
  line-height: 1;
  text-transform: none;
  white-space: nowrap;
  overflow-wrap: normal;
  -webkit-font-smoothing: antialiased;
  text-rendering: optimizelegibility;
  font-feature-settings: "liga";
}

.c5 > span {
  display: inline-block;
}

.c5.c5 {
  max-width: unset;
}

.c6.c6 {
  color: rgb(201, 29, 29);
}

.c11.c11 {
  color: rgb(175, 121, 2);
}

.c2 {
  display: flex;
  font-family: "Open Sans", sans-serif;
  font-size: 0.75rem;
  font-weight: 400;
  margin: 0px 0px 4px;
  padding: 4px 8px;
  background: rgb(252, 233, 233);
  color: rgb(201, 29, 29);
}

.c9 {
  display: flex;
  font-family: "Open Sans", sans-serif;
  font-size: 0.75rem;
  font-weight: 400;
  margin: 0px 0px 4px;
  padding: 4px 8px;
  background: rgb(254, 242, 218);
  color: rgb(22, 25, 29);
}

.c3 {
  display: flex;
  margin-right: 4px;
}

.c3 .c4 {
  font-size: 1.25rem;
}

.c8 {
  align-self: center;
  max-width: calc(100% - 4px - 1.25rem);
}

.c1 {
  box-sizing: border-box;
  flex-grow: 1;
  width: 100%;
}

.c14 {
  appearance: none;
  background-color: inherit;
  border-width: medium;
  border-style: none;
  border-color: currentcolor;
  border-image: initial;
  border-radius: 0px;
  caret-color: transparent;
  color: inherit;
  font-size: inherit;
  flex-grow: 1;
  font-style: inherit;
  font-weight: inherit;
  font-family: inherit;
  height: 100%;
  padding: 0px 32px 0px 12px;
  text-align: inherit;
  text-transform: inherit;
  width: 100%;
  cursor: pointer;
}

.c14.c14.c14 {
  outline: transparent solid 1px;
}

.c14::selection {
  background-color: transparent;
}

.c14::placeholder {
  font-style: italic;
  color: rgb(89, 102, 115);
  opacity: 1;
}

.c0[class*="h_"] .c17.c17 {
  background-color: inherit !important;
}

.c12 {
  background-color: transparent;
  box-shadow: none;
  border-width: medium;
  border-style: none;
  border-color: currentcolor;
  border-image: initial;
  border-radius: 0px;
  color: rgb(77, 77, 77);
  display: flex;
  font-family: "Open Sans", sans-serif;
  font-size: 0.75rem;
  font-weight: 400;
  height: 32px;
}

.c12:focus {
  outline: none;
}

.c13 {
  background-color: rgb(241, 242, 244);
  border-radius: inherit;
  display: flex;
  flex-grow: 1;
  position: relative;
  box-shadow: rgb(201, 29, 29) 0px 1px 0px 0px;
}

.c13:focus-within {
  box-shadow: rgb(213, 0, 117) 0px 2px 0px 0px;
  outline-offset: 0px;
  outline: rgb(51, 51, 51) dotted 1px;
}

.c16::after {
  align-items: center;
  color: rgb(127, 140, 155);
  content: "";
  display: flex;
  font-family: "Material Symbols Outlined";
  font-variation-settings: "FILL" 1, "wght" 400, "GRAD" 0, "opsz" 24;
  font-size: 1.5rem;
  font-style: normal;
  justify-content: center;
  height: 100%;
  line-height: 0;
  pointer-events: none;
  position: absolute;
  right: 0px;
  text-transform: none;
  top: 50%;
  transform: translateY(-50%);
  width: 32px;
  overflow-wrap: normal;
}

.c15 {
  appearance: none;
  font-style: normal;
  color: rgb(77, 77, 77);
  font-size: inherit;
}

.c15:focus {
  border-width: medium;
  border-style: none;
  border-color: currentcolor;
  border-image: initial;
}

@media (pointer: coarse) {
  .c13:active {
    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
    box-shadow: rgb(201, 29, 29) 0px 1px 0px 0px;
  }
}

@media (pointer: fine) {
  .c13:hover {
    box-shadow: rgb(213, 0, 117) 0px 2px 0px 0px;
  }
}

@media (pointer: coarse) {
  .c15:active {
    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
    background-color: rgb(213, 0, 117);
    color: rgb(255, 255, 255);
  }
}

@media (pointer: fine) {
  .c15:hover {
    background-color: rgb(213, 0, 117);
    color: rgb(255, 255, 255);
  }
}

<div
  class="c0 c1 field field--block month-selector"
  data-role="month-selector"
>
  <div
    class="c2 message message--error"
    data-role="month-selector-error-message"
  >
    <div
      class="c3 messageIcon"
    >
      <i
        class="c4 c5 c6 plasma-icon plasma-icon--error plasma-icon--custom"
        data-role="plasma-icon"
        title="Error"
      >
        <span
          aria-hidden="true"
        >
          
        </span>
        <span
          class="c7 -u-unseenButRead"
          data-role="hidden-text"
        >
          Error
        </span>
      </i>
    </div>
    <div
      class="c8 messageText"
      data-role="error-text"
    >
      Error message
    </div>
  </div>
  <div
    class="c9 message message--warning"
    data-role="month-selector-warning-message"
  >
    <div
      class="c3 messageIcon"
    >
      <i
        class="c4 c10 c11 plasma-icon plasma-icon--warning"
        data-role="plasma-icon"
        title="Warning"
      >
        <span
          aria-hidden="true"
        >
          warning
        </span>
        <span
          class="c7 -u-unseenButRead"
          data-role="hidden-text"
        >
          Warning
        </span>
      </i>
    </div>
    <div
      class="c8 messageText"
      data-role="warning-text"
    >
      Warning message
    </div>
  </div>
  <div
    class="c12 field__select"
    data-role="month-selector-control"
  >
    <div
      class="c13 field__select-wrapper field__select-wrapper--error field__select-wrapper--warning"
      data-role="month-selector-wrapper"
    >
      <select
        class="c14 field__selectTitle field__selectTitle--error field__selectTitle--warning"
        data-role="month-selector-input"
      >
        <option
          class="c15 field__selectOption"
          data-role="month-selector-option"
          value="0"
        >
          January
        </option>
        <option
          class="c15 field__selectOption"
          data-role="month-selector-option"
          value="1"
        >
          February
        </option>
        <option
          class="c15 field__selectOption"
          data-role="month-selector-option"
          value="2"
        >
          March
        </option>
        <option
          class="c15 field__selectOption"
          data-role="month-selector-option"
          value="3"
        >
          April
        </option>
        <option
          class="c15 field__selectOption"
          data-role="month-selector-option"
          value="4"
        >
          May
        </option>
        <option
          class="c15 field__selectOption"
          data-role="month-selector-option"
          value="5"
        >
          June
        </option>
        <option
          class="c15 field__selectOption"
          data-role="month-selector-option"
          value="6"
        >
          July
        </option>
        <option
          class="c15 field__selectOption"
          data-role="month-selector-option"
          value="7"
        >
          August
        </option>
        <option
          class="c15 field__selectOption"
          data-role="month-selector-option"
          value="8"
        >
          September
        </option>
        <option
          class="c15 field__selectOption"
          data-role="month-selector-option"
          value="9"
        >
          October
        </option>
        <option
          class="c15 field__selectOption"
          data-role="month-selector-option"
          value="10"
        >
          November
        </option>
        <option
          class="c15 field__selectOption"
          data-role="month-selector-option"
          value="11"
        >
          December
        </option>
      </select>
      <span
        aria-hidden="true"
        class="c16 field__select-arrow"
      />
    </div>
  </div>
</div>
`;

exports[`com.mgmtp.a12.widgets.input.month-selector > rendering with error state 1`] = `
.c1 {
  box-sizing: border-box;
  flex-grow: 1;
  width: 100%;
}

.c4 {
  appearance: none;
  background-color: inherit;
  border-width: medium;
  border-style: none;
  border-color: currentcolor;
  border-image: initial;
  border-radius: 0px;
  caret-color: transparent;
  color: inherit;
  font-size: inherit;
  flex-grow: 1;
  font-style: inherit;
  font-weight: inherit;
  font-family: inherit;
  height: 100%;
  padding: 0px 32px 0px 12px;
  text-align: inherit;
  text-transform: inherit;
  width: 100%;
  cursor: pointer;
}

.c4.c4.c4 {
  outline: transparent solid 1px;
}

.c4::selection {
  background-color: transparent;
}

.c4::placeholder {
  font-style: italic;
  color: rgb(89, 102, 115);
  opacity: 1;
}

.c0[class*="h_"] .c7.c7 {
  background-color: inherit !important;
}

.c2 {
  background-color: transparent;
  box-shadow: none;
  border-width: medium;
  border-style: none;
  border-color: currentcolor;
  border-image: initial;
  border-radius: 0px;
  color: rgb(77, 77, 77);
  display: flex;
  font-family: "Open Sans", sans-serif;
  font-size: 0.75rem;
  font-weight: 400;
  height: 32px;
}

.c2:focus {
  outline: none;
}

.c3 {
  background-color: rgb(241, 242, 244);
  border-radius: inherit;
  display: flex;
  flex-grow: 1;
  position: relative;
  box-shadow: rgb(201, 29, 29) 0px 1px 0px 0px;
}

.c3:focus-within {
  box-shadow: rgb(213, 0, 117) 0px 2px 0px 0px;
  outline-offset: 0px;
  outline: rgb(51, 51, 51) dotted 1px;
}

.c6::after {
  align-items: center;
  color: rgb(127, 140, 155);
  content: "";
  display: flex;
  font-family: "Material Symbols Outlined";
  font-variation-settings: "FILL" 1, "wght" 400, "GRAD" 0, "opsz" 24;
  font-size: 1.5rem;
  font-style: normal;
  justify-content: center;
  height: 100%;
  line-height: 0;
  pointer-events: none;
  position: absolute;
  right: 0px;
  text-transform: none;
  top: 50%;
  transform: translateY(-50%);
  width: 32px;
  overflow-wrap: normal;
}

.c5 {
  appearance: none;
  font-style: normal;
  color: rgb(77, 77, 77);
  font-size: inherit;
}

.c5:focus {
  border-width: medium;
  border-style: none;
  border-color: currentcolor;
  border-image: initial;
}

@media (pointer: coarse) {
  .c3:active {
    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
    box-shadow: rgb(201, 29, 29) 0px 1px 0px 0px;
  }
}

@media (pointer: fine) {
  .c3:hover {
    box-shadow: rgb(213, 0, 117) 0px 2px 0px 0px;
  }
}

@media (pointer: coarse) {
  .c5:active {
    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
    background-color: rgb(213, 0, 117);
    color: rgb(255, 255, 255);
  }
}

@media (pointer: fine) {
  .c5:hover {
    background-color: rgb(213, 0, 117);
    color: rgb(255, 255, 255);
  }
}

<div
  class="c0 c1 field field--block month-selector"
  data-role="month-selector"
>
  <div
    class="c2 field__select"
    data-role="month-selector-control"
  >
    <div
      class="c3 field__select-wrapper field__select-wrapper--error"
      data-role="month-selector-wrapper"
    >
      <select
        class="c4 field__selectTitle field__selectTitle--error"
        data-role="month-selector-input"
      >
        <option
          class="c5 field__selectOption"
          data-role="month-selector-option"
          value="0"
        >
          January
        </option>
        <option
          class="c5 field__selectOption"
          data-role="month-selector-option"
          value="1"
        >
          February
        </option>
        <option
          class="c5 field__selectOption"
          data-role="month-selector-option"
          value="2"
        >
          March
        </option>
        <option
          class="c5 field__selectOption"
          data-role="month-selector-option"
          value="3"
        >
          April
        </option>
        <option
          class="c5 field__selectOption"
          data-role="month-selector-option"
          value="4"
        >
          May
        </option>
        <option
          class="c5 field__selectOption"
          data-role="month-selector-option"
          value="5"
        >
          June
        </option>
        <option
          class="c5 field__selectOption"
          data-role="month-selector-option"
          value="6"
        >
          July
        </option>
        <option
          class="c5 field__selectOption"
          data-role="month-selector-option"
          value="7"
        >
          August
        </option>
        <option
          class="c5 field__selectOption"
          data-role="month-selector-option"
          value="8"
        >
          September
        </option>
        <option
          class="c5 field__selectOption"
          data-role="month-selector-option"
          value="9"
        >
          October
        </option>
        <option
          class="c5 field__selectOption"
          data-role="month-selector-option"
          value="10"
        >
          November
        </option>
        <option
          class="c5 field__selectOption"
          data-role="month-selector-option"
          value="11"
        >
          December
        </option>
      </select>
      <span
        aria-hidden="true"
        class="c6 field__select-arrow"
      />
    </div>
  </div>
</div>
`;

exports[`com.mgmtp.a12.widgets.input.month-selector > rendering with helper text 1`] = `
.c8 {
  color: rgb(97, 111, 124);
  display: block;
  font-family: "Open Sans", sans-serif;
  font-size: 0.75rem;
  line-height: 1.25;
  margin: 4px 0px 0px;
  width: fit-content;
}

.c7 {
  display: flex;
}

.c1 {
  box-sizing: border-box;
  flex-grow: 1;
  width: 100%;
}

.c4 {
  appearance: none;
  background-color: inherit;
  border-width: medium;
  border-style: none;
  border-color: currentcolor;
  border-image: initial;
  border-radius: 0px;
  caret-color: transparent;
  color: inherit;
  font-size: inherit;
  flex-grow: 1;
  font-style: inherit;
  font-weight: inherit;
  font-family: inherit;
  height: 100%;
  padding: 0px 32px 0px 12px;
  text-align: inherit;
  text-transform: inherit;
  width: 100%;
  cursor: pointer;
}

.c4.c4.c4 {
  outline: transparent solid 1px;
}

.c4::selection {
  background-color: transparent;
}

.c4::placeholder {
  font-style: italic;
  color: rgb(89, 102, 115);
  opacity: 1;
}

.c0[class*="h_"] .c9.c9 {
  background-color: inherit !important;
}

.c2 {
  background-color: transparent;
  box-shadow: none;
  border-width: medium;
  border-style: none;
  border-color: currentcolor;
  border-image: initial;
  border-radius: 0px;
  color: rgb(77, 77, 77);
  display: flex;
  font-family: "Open Sans", sans-serif;
  font-size: 0.75rem;
  font-weight: 400;
  height: 32px;
}

.c2:focus {
  outline: none;
}

.c3 {
  background-color: rgb(241, 242, 244);
  border-radius: inherit;
  box-shadow: rgb(89, 102, 115) 0px 1px 0px 0px;
  display: flex;
  flex-grow: 1;
  position: relative;
}

.c3:focus-within {
  box-shadow: rgb(213, 0, 117) 0px 2px 0px 0px;
  outline-offset: 0px;
  outline: rgb(51, 51, 51) dotted 1px;
}

.c6::after {
  align-items: center;
  color: rgb(127, 140, 155);
  content: "";
  display: flex;
  font-family: "Material Symbols Outlined";
  font-variation-settings: "FILL" 1, "wght" 400, "GRAD" 0, "opsz" 24;
  font-size: 1.5rem;
  font-style: normal;
  justify-content: center;
  height: 100%;
  line-height: 0;
  pointer-events: none;
  position: absolute;
  right: 0px;
  text-transform: none;
  top: 50%;
  transform: translateY(-50%);
  width: 32px;
  overflow-wrap: normal;
}

.c5 {
  appearance: none;
  font-style: normal;
  color: rgb(77, 77, 77);
  font-size: inherit;
}

.c5:focus {
  border-width: medium;
  border-style: none;
  border-color: currentcolor;
  border-image: initial;
}

@media (pointer: coarse) {
  .c3:active {
    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
    box-shadow: rgb(213, 0, 117) 0px 2px 0px 0px;
  }
}

@media (pointer: fine) {
  .c3:hover {
    box-shadow: rgb(213, 0, 117) 0px 2px 0px 0px;
  }
}

@media (pointer: coarse) {
  .c5:active {
    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
    background-color: rgb(213, 0, 117);
    color: rgb(255, 255, 255);
  }
}

@media (pointer: fine) {
  .c5:hover {
    background-color: rgb(213, 0, 117);
    color: rgb(255, 255, 255);
  }
}

<div
  class="c0 c1 field field--block month-selector"
  data-role="month-selector"
>
  <div
    class="c2 field__select"
    data-role="month-selector-control"
  >
    <div
      class="c3 field__select-wrapper"
      data-role="month-selector-wrapper"
    >
      <select
        class="c4 field__selectTitle"
        data-role="month-selector-input"
      >
        <option
          class="c5 field__selectOption"
          data-role="month-selector-option"
          value="0"
        >
          January
        </option>
        <option
          class="c5 field__selectOption"
          data-role="month-selector-option"
          value="1"
        >
          February
        </option>
        <option
          class="c5 field__selectOption"
          data-role="month-selector-option"
          value="2"
        >
          March
        </option>
        <option
          class="c5 field__selectOption"
          data-role="month-selector-option"
          value="3"
        >
          April
        </option>
        <option
          class="c5 field__selectOption"
          data-role="month-selector-option"
          value="4"
        >
          May
        </option>
        <option
          class="c5 field__selectOption"
          data-role="month-selector-option"
          value="5"
        >
          June
        </option>
        <option
          class="c5 field__selectOption"
          data-role="month-selector-option"
          value="6"
        >
          July
        </option>
        <option
          class="c5 field__selectOption"
          data-role="month-selector-option"
          value="7"
        >
          August
        </option>
        <option
          class="c5 field__selectOption"
          data-role="month-selector-option"
          value="8"
        >
          September
        </option>
        <option
          class="c5 field__selectOption"
          data-role="month-selector-option"
          value="9"
        >
          October
        </option>
        <option
          class="c5 field__selectOption"
          data-role="month-selector-option"
          value="10"
        >
          November
        </option>
        <option
          class="c5 field__selectOption"
          data-role="month-selector-option"
          value="11"
        >
          December
        </option>
      </select>
      <span
        aria-hidden="true"
        class="c6 field__select-arrow"
      />
    </div>
  </div>
  <div
    class="c7 field__helper"
    data-role="month-selector-helper-text"
  >
    <label
      class="c8 field__helper-text"
    >
      Helper text
    </label>
  </div>
</div>
`;

exports[`com.mgmtp.a12.widgets.input.month-selector > rendering with hidden label 1`] = `
.c3 {
  color: rgb(77, 77, 77);
  display: inline-block;
  font-family: "Open Sans", sans-serif;
  font-size: 0.75rem;
  font-weight: 600;
  line-height: 1.45;
  text-transform: none;
  align-self: center;
  border: 0px;
  clip: rect(0px, 0px, 0px, 0px);
  clip-path: inset(100%);
  height: 1px;
  min-height: 1px;
  overflow: hidden;
  padding: 0px;
  position: absolute;
  top: 0px;
  width: 1px;
  margin: -1px !important;
}

.c3:empty {
  display: none;
}

.c3 * {
  width: 1px;
  height: 1px;
}

.c1 {
  box-sizing: border-box;
  flex-grow: 1;
  width: 100%;
}

.c1 .c2 {
  display: block;
  width: fit-content;
}

.c9 .c2 {
  display: block;
  width: fit-content;
}

.c9[class*="h_"] .c2 {
  color: rgb(169, 179, 188) !important;
}

.c10[data-role="checkbox-group"] .c2,
.c10[data-role="radio-group"] .c2,
.c10[data-role="file-upload"] .c2 {
  max-width: 100%;
  vertical-align: middle;
}

.c6 {
  appearance: none;
  background-color: inherit;
  border-width: medium;
  border-style: none;
  border-color: currentcolor;
  border-image: initial;
  border-radius: 0px;
  caret-color: transparent;
  color: inherit;
  font-size: inherit;
  flex-grow: 1;
  font-style: inherit;
  font-weight: inherit;
  font-family: inherit;
  height: 100%;
  padding: 0px 32px 0px 12px;
  text-align: inherit;
  text-transform: inherit;
  width: 100%;
  cursor: pointer;
}

.c6.c6.c6 {
  outline: transparent solid 1px;
}

.c6::selection {
  background-color: transparent;
}

.c6::placeholder {
  font-style: italic;
  color: rgb(89, 102, 115);
  opacity: 1;
}

.c0[class*="h_"] .c11.c11 {
  background-color: inherit !important;
}

.c4 {
  background-color: transparent;
  box-shadow: none;
  border-width: medium;
  border-style: none;
  border-color: currentcolor;
  border-image: initial;
  border-radius: 0px;
  color: rgb(77, 77, 77);
  display: flex;
  font-family: "Open Sans", sans-serif;
  font-size: 0.75rem;
  font-weight: 400;
  height: 32px;
}

.c4:focus {
  outline: none;
}

.c5 {
  background-color: rgb(241, 242, 244);
  border-radius: inherit;
  box-shadow: rgb(89, 102, 115) 0px 1px 0px 0px;
  display: flex;
  flex-grow: 1;
  position: relative;
}

.c5:focus-within {
  box-shadow: rgb(213, 0, 117) 0px 2px 0px 0px;
  outline-offset: 0px;
  outline: rgb(51, 51, 51) dotted 1px;
}

.c8::after {
  align-items: center;
  color: rgb(127, 140, 155);
  content: "";
  display: flex;
  font-family: "Material Symbols Outlined";
  font-variation-settings: "FILL" 1, "wght" 400, "GRAD" 0, "opsz" 24;
  font-size: 1.5rem;
  font-style: normal;
  justify-content: center;
  height: 100%;
  line-height: 0;
  pointer-events: none;
  position: absolute;
  right: 0px;
  text-transform: none;
  top: 50%;
  transform: translateY(-50%);
  width: 32px;
  overflow-wrap: normal;
}

.c7 {
  appearance: none;
  font-style: normal;
  color: rgb(77, 77, 77);
  font-size: inherit;
}

.c7:focus {
  border-width: medium;
  border-style: none;
  border-color: currentcolor;
  border-image: initial;
}

@media (pointer: coarse) {
  .c5:active {
    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
    box-shadow: rgb(213, 0, 117) 0px 2px 0px 0px;
  }
}

@media (pointer: fine) {
  .c5:hover {
    box-shadow: rgb(213, 0, 117) 0px 2px 0px 0px;
  }
}

@media (pointer: coarse) {
  .c7:active {
    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
    background-color: rgb(213, 0, 117);
    color: rgb(255, 255, 255);
  }
}

@media (pointer: fine) {
  .c7:hover {
    background-color: rgb(213, 0, 117);
    color: rgb(255, 255, 255);
  }
}

<div
  class="c0 c1 field field--block month-selector"
  data-role="month-selector"
>
  <label
    class="c2 c3 label field__label -u-unseenButRead"
    data-role="month-selector-label"
  >
    Test Month Selector
  </label>
  <div
    class="c4 field__select"
    data-role="month-selector-control"
  >
    <div
      class="c5 field__select-wrapper"
      data-role="month-selector-wrapper"
    >
      <select
        class="c6 field__selectTitle"
        data-role="month-selector-input"
      >
        <option
          class="c7 field__selectOption"
          data-role="month-selector-option"
          value="0"
        >
          January
        </option>
        <option
          class="c7 field__selectOption"
          data-role="month-selector-option"
          value="1"
        >
          February
        </option>
        <option
          class="c7 field__selectOption"
          data-role="month-selector-option"
          value="2"
        >
          March
        </option>
        <option
          class="c7 field__selectOption"
          data-role="month-selector-option"
          value="3"
        >
          April
        </option>
        <option
          class="c7 field__selectOption"
          data-role="month-selector-option"
          value="4"
        >
          May
        </option>
        <option
          class="c7 field__selectOption"
          data-role="month-selector-option"
          value="5"
        >
          June
        </option>
        <option
          class="c7 field__selectOption"
          data-role="month-selector-option"
          value="6"
        >
          July
        </option>
        <option
          class="c7 field__selectOption"
          data-role="month-selector-option"
          value="7"
        >
          August
        </option>
        <option
          class="c7 field__selectOption"
          data-role="month-selector-option"
          value="8"
        >
          September
        </option>
        <option
          class="c7 field__selectOption"
          data-role="month-selector-option"
          value="9"
        >
          October
        </option>
        <option
          class="c7 field__selectOption"
          data-role="month-selector-option"
          value="10"
        >
          November
        </option>
        <option
          class="c7 field__selectOption"
          data-role="month-selector-option"
          value="11"
        >
          December
        </option>
      </select>
      <span
        aria-hidden="true"
        class="c8 field__select-arrow"
      />
    </div>
  </div>
</div>
`;

exports[`com.mgmtp.a12.widgets.input.month-selector > rendering with info message 1`] = `
.c7 {
  border: 0px;
  clip: rect(0px, 0px, 0px, 0px);
  clip-path: inset(100%);
  height: 1px;
  min-height: 1px;
  overflow: hidden;
  padding: 0px;
  position: absolute;
  top: 0px;
  width: 1px;
  margin: -1px !important;
}

.c7 * {
  width: 1px;
  height: 1px;
}

.c5 {
  box-sizing: border-box;
  color: rgb(127, 140, 155);
  display: inline-block;
  direction: ltr;
  font-family: "Material Symbols Outlined";
  font-variation-settings: "FILL" 1, "wght" 400, "GRAD" 0, "opsz" 24;
  font-size: 1rem;
  font-style: normal;
  font-weight: 400;
  letter-spacing: normal;
  line-height: 1;
  text-transform: none;
  white-space: nowrap;
  overflow-wrap: normal;
  -webkit-font-smoothing: antialiased;
  text-rendering: optimizelegibility;
  font-feature-settings: "liga";
}

.c5 > span {
  display: inline-block;
}

.c5.c5 {
  max-width: unset;
}

.c6.c6 {
  color: rgb(5, 104, 174);
}

.c2 {
  display: flex;
  font-family: "Open Sans", sans-serif;
  font-size: 0.75rem;
  font-weight: 400;
  margin: 0px 0px 4px;
  padding: 4px 8px;
  background: rgb(230, 244, 254);
  color: rgb(5, 104, 174);
}

.c3 {
  display: flex;
  margin-right: 4px;
}

.c3 .c4 {
  font-size: 1.25rem;
}

.c8 {
  align-self: center;
  max-width: calc(100% - 4px - 1.25rem);
}

.c1 {
  box-sizing: border-box;
  flex-grow: 1;
  width: 100%;
}

.c11 {
  appearance: none;
  background-color: inherit;
  border-width: medium;
  border-style: none;
  border-color: currentcolor;
  border-image: initial;
  border-radius: 0px;
  caret-color: transparent;
  color: inherit;
  font-size: inherit;
  flex-grow: 1;
  font-style: inherit;
  font-weight: inherit;
  font-family: inherit;
  height: 100%;
  padding: 0px 32px 0px 12px;
  text-align: inherit;
  text-transform: inherit;
  width: 100%;
  cursor: pointer;
}

.c11.c11.c11 {
  outline: transparent solid 1px;
}

.c11::selection {
  background-color: transparent;
}

.c11::placeholder {
  font-style: italic;
  color: rgb(89, 102, 115);
  opacity: 1;
}

.c0[class*="h_"] .c14.c14 {
  background-color: inherit !important;
}

.c9 {
  background-color: transparent;
  box-shadow: none;
  border-width: medium;
  border-style: none;
  border-color: currentcolor;
  border-image: initial;
  border-radius: 0px;
  color: rgb(77, 77, 77);
  display: flex;
  font-family: "Open Sans", sans-serif;
  font-size: 0.75rem;
  font-weight: 400;
  height: 32px;
}

.c9:focus {
  outline: none;
}

.c10 {
  background-color: rgb(241, 242, 244);
  border-radius: inherit;
  display: flex;
  flex-grow: 1;
  position: relative;
  box-shadow: rgb(5, 104, 174) 0px 1px 0px 0px;
}

.c10:focus-within {
  box-shadow: rgb(213, 0, 117) 0px 2px 0px 0px;
  outline-offset: 0px;
  outline: rgb(51, 51, 51) dotted 1px;
}

.c13::after {
  align-items: center;
  color: rgb(127, 140, 155);
  content: "";
  display: flex;
  font-family: "Material Symbols Outlined";
  font-variation-settings: "FILL" 1, "wght" 400, "GRAD" 0, "opsz" 24;
  font-size: 1.5rem;
  font-style: normal;
  justify-content: center;
  height: 100%;
  line-height: 0;
  pointer-events: none;
  position: absolute;
  right: 0px;
  text-transform: none;
  top: 50%;
  transform: translateY(-50%);
  width: 32px;
  overflow-wrap: normal;
}

.c12 {
  appearance: none;
  font-style: normal;
  color: rgb(77, 77, 77);
  font-size: inherit;
}

.c12:focus {
  border-width: medium;
  border-style: none;
  border-color: currentcolor;
  border-image: initial;
}

@media (pointer: coarse) {
  .c10:active {
    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
    box-shadow: rgb(5, 104, 174) 0px 1px 0px 0px;
  }
}

@media (pointer: fine) {
  .c10:hover {
    box-shadow: rgb(213, 0, 117) 0px 2px 0px 0px;
  }
}

@media (pointer: coarse) {
  .c12:active {
    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
    background-color: rgb(213, 0, 117);
    color: rgb(255, 255, 255);
  }
}

@media (pointer: fine) {
  .c12:hover {
    background-color: rgb(213, 0, 117);
    color: rgb(255, 255, 255);
  }
}

<div
  class="c0 c1 field field--block month-selector"
  data-role="month-selector"
>
  <div
    class="c2"
    data-role="month-selector-info-message"
  >
    <div
      class="c3"
    >
      <i
        class="c4 c5 c6 plasma-icon plasma-icon--info"
        data-role="plasma-icon"
        title="Information"
      >
        <span
          aria-hidden="true"
        >
          info
        </span>
        <span
          class="c7 -u-unseenButRead"
          data-role="hidden-text"
        >
          Information
        </span>
      </i>
    </div>
    <div
      class="c8"
      data-role="info-text"
    >
      Info message
    </div>
  </div>
  <div
    class="c9 field__select"
    data-role="month-selector-control"
  >
    <div
      class="c10 field__select-wrapper"
      data-role="month-selector-wrapper"
    >
      <select
        class="c11 field__selectTitle"
        data-role="month-selector-input"
      >
        <option
          class="c12 field__selectOption"
          data-role="month-selector-option"
          value="0"
        >
          January
        </option>
        <option
          class="c12 field__selectOption"
          data-role="month-selector-option"
          value="1"
        >
          February
        </option>
        <option
          class="c12 field__selectOption"
          data-role="month-selector-option"
          value="2"
        >
          March
        </option>
        <option
          class="c12 field__selectOption"
          data-role="month-selector-option"
          value="3"
        >
          April
        </option>
        <option
          class="c12 field__selectOption"
          data-role="month-selector-option"
          value="4"
        >
          May
        </option>
        <option
          class="c12 field__selectOption"
          data-role="month-selector-option"
          value="5"
        >
          June
        </option>
        <option
          class="c12 field__selectOption"
          data-role="month-selector-option"
          value="6"
        >
          July
        </option>
        <option
          class="c12 field__selectOption"
          data-role="month-selector-option"
          value="7"
        >
          August
        </option>
        <option
          class="c12 field__selectOption"
          data-role="month-selector-option"
          value="8"
        >
          September
        </option>
        <option
          class="c12 field__selectOption"
          data-role="month-selector-option"
          value="9"
        >
          October
        </option>
        <option
          class="c12 field__selectOption"
          data-role="month-selector-option"
          value="10"
        >
          November
        </option>
        <option
          class="c12 field__selectOption"
          data-role="month-selector-option"
          value="11"
        >
          December
        </option>
      </select>
      <span
        aria-hidden="true"
        class="c13 field__select-arrow"
      />
    </div>
  </div>
</div>
`;

exports[`com.mgmtp.a12.widgets.input.month-selector > rendering with info state 1`] = `
.c1 {
  box-sizing: border-box;
  flex-grow: 1;
  width: 100%;
}

.c4 {
  appearance: none;
  background-color: inherit;
  border-width: medium;
  border-style: none;
  border-color: currentcolor;
  border-image: initial;
  border-radius: 0px;
  caret-color: transparent;
  color: inherit;
  font-size: inherit;
  flex-grow: 1;
  font-style: inherit;
  font-weight: inherit;
  font-family: inherit;
  height: 100%;
  padding: 0px 32px 0px 12px;
  text-align: inherit;
  text-transform: inherit;
  width: 100%;
  cursor: pointer;
}

.c4.c4.c4 {
  outline: transparent solid 1px;
}

.c4::selection {
  background-color: transparent;
}

.c4::placeholder {
  font-style: italic;
  color: rgb(89, 102, 115);
  opacity: 1;
}

.c0[class*="h_"] .c7.c7 {
  background-color: inherit !important;
}

.c2 {
  background-color: transparent;
  box-shadow: none;
  border-width: medium;
  border-style: none;
  border-color: currentcolor;
  border-image: initial;
  border-radius: 0px;
  color: rgb(77, 77, 77);
  display: flex;
  font-family: "Open Sans", sans-serif;
  font-size: 0.75rem;
  font-weight: 400;
  height: 32px;
}

.c2:focus {
  outline: none;
}

.c3 {
  background-color: rgb(241, 242, 244);
  border-radius: inherit;
  display: flex;
  flex-grow: 1;
  position: relative;
  box-shadow: rgb(5, 104, 174) 0px 1px 0px 0px;
}

.c3:focus-within {
  box-shadow: rgb(213, 0, 117) 0px 2px 0px 0px;
  outline-offset: 0px;
  outline: rgb(51, 51, 51) dotted 1px;
}

.c6::after {
  align-items: center;
  color: rgb(127, 140, 155);
  content: "";
  display: flex;
  font-family: "Material Symbols Outlined";
  font-variation-settings: "FILL" 1, "wght" 400, "GRAD" 0, "opsz" 24;
  font-size: 1.5rem;
  font-style: normal;
  justify-content: center;
  height: 100%;
  line-height: 0;
  pointer-events: none;
  position: absolute;
  right: 0px;
  text-transform: none;
  top: 50%;
  transform: translateY(-50%);
  width: 32px;
  overflow-wrap: normal;
}

.c5 {
  appearance: none;
  font-style: normal;
  color: rgb(77, 77, 77);
  font-size: inherit;
}

.c5:focus {
  border-width: medium;
  border-style: none;
  border-color: currentcolor;
  border-image: initial;
}

@media (pointer: coarse) {
  .c3:active {
    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
    box-shadow: rgb(5, 104, 174) 0px 1px 0px 0px;
  }
}

@media (pointer: fine) {
  .c3:hover {
    box-shadow: rgb(213, 0, 117) 0px 2px 0px 0px;
  }
}

@media (pointer: coarse) {
  .c5:active {
    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
    background-color: rgb(213, 0, 117);
    color: rgb(255, 255, 255);
  }
}

@media (pointer: fine) {
  .c5:hover {
    background-color: rgb(213, 0, 117);
    color: rgb(255, 255, 255);
  }
}

<div
  class="c0 c1 field field--block month-selector"
  data-role="month-selector"
>
  <div
    class="c2 field__select"
    data-role="month-selector-control"
  >
    <div
      class="c3 field__select-wrapper"
      data-role="month-selector-wrapper"
    >
      <select
        class="c4 field__selectTitle"
        data-role="month-selector-input"
      >
        <option
          class="c5 field__selectOption"
          data-role="month-selector-option"
          value="0"
        >
          January
        </option>
        <option
          class="c5 field__selectOption"
          data-role="month-selector-option"
          value="1"
        >
          February
        </option>
        <option
          class="c5 field__selectOption"
          data-role="month-selector-option"
          value="2"
        >
          March
        </option>
        <option
          class="c5 field__selectOption"
          data-role="month-selector-option"
          value="3"
        >
          April
        </option>
        <option
          class="c5 field__selectOption"
          data-role="month-selector-option"
          value="4"
        >
          May
        </option>
        <option
          class="c5 field__selectOption"
          data-role="month-selector-option"
          value="5"
        >
          June
        </option>
        <option
          class="c5 field__selectOption"
          data-role="month-selector-option"
          value="6"
        >
          July
        </option>
        <option
          class="c5 field__selectOption"
          data-role="month-selector-option"
          value="7"
        >
          August
        </option>
        <option
          class="c5 field__selectOption"
          data-role="month-selector-option"
          value="8"
        >
          September
        </option>
        <option
          class="c5 field__selectOption"
          data-role="month-selector-option"
          value="9"
        >
          October
        </option>
        <option
          class="c5 field__selectOption"
          data-role="month-selector-option"
          value="10"
        >
          November
        </option>
        <option
          class="c5 field__selectOption"
          data-role="month-selector-option"
          value="11"
        >
          December
        </option>
      </select>
      <span
        aria-hidden="true"
        class="c6 field__select-arrow"
      />
    </div>
  </div>
</div>
`;

exports[`com.mgmtp.a12.widgets.input.month-selector > rendering with inline tooltip 1`] = `
.c1 {
  box-sizing: border-box;
  flex-grow: 1;
  width: 100%;
}

.c4 {
  appearance: none;
  background-color: inherit;
  border-width: medium;
  border-style: none;
  border-color: currentcolor;
  border-image: initial;
  border-radius: 0px;
  caret-color: transparent;
  color: inherit;
  font-size: inherit;
  flex-grow: 1;
  font-style: inherit;
  font-weight: inherit;
  font-family: inherit;
  height: 100%;
  padding: 0px 32px 0px 12px;
  text-align: inherit;
  text-transform: inherit;
  width: 100%;
  cursor: pointer;
}

.c4.c4.c4 {
  outline: transparent solid 1px;
}

.c4::selection {
  background-color: transparent;
}

.c4::placeholder {
  font-style: italic;
  color: rgb(89, 102, 115);
  opacity: 1;
}

.c0[class*="h_"] .c7.c7 {
  background-color: inherit !important;
}

.c2 {
  background-color: transparent;
  box-shadow: none;
  border-width: medium;
  border-style: none;
  border-color: currentcolor;
  border-image: initial;
  border-radius: 0px;
  color: rgb(77, 77, 77);
  display: flex;
  font-family: "Open Sans", sans-serif;
  font-size: 0.75rem;
  font-weight: 400;
  height: 32px;
}

.c2:focus {
  outline: none;
}

.c3 {
  background-color: rgb(241, 242, 244);
  border-radius: inherit;
  box-shadow: rgb(89, 102, 115) 0px 1px 0px 0px;
  display: flex;
  flex-grow: 1;
  position: relative;
}

.c3:focus-within {
  box-shadow: rgb(213, 0, 117) 0px 2px 0px 0px;
  outline-offset: 0px;
  outline: rgb(51, 51, 51) dotted 1px;
}

.c6::after {
  align-items: center;
  color: rgb(127, 140, 155);
  content: "";
  display: flex;
  font-family: "Material Symbols Outlined";
  font-variation-settings: "FILL" 1, "wght" 400, "GRAD" 0, "opsz" 24;
  font-size: 1.5rem;
  font-style: normal;
  justify-content: center;
  height: 100%;
  line-height: 0;
  pointer-events: none;
  position: absolute;
  right: 0px;
  text-transform: none;
  top: 50%;
  transform: translateY(-50%);
  width: 32px;
  overflow-wrap: normal;
}

.c5 {
  appearance: none;
  font-style: normal;
  color: rgb(77, 77, 77);
  font-size: inherit;
}

.c5:focus {
  border-width: medium;
  border-style: none;
  border-color: currentcolor;
  border-image: initial;
}

@media (pointer: coarse) {
  .c3:active {
    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
    box-shadow: rgb(213, 0, 117) 0px 2px 0px 0px;
  }
}

@media (pointer: fine) {
  .c3:hover {
    box-shadow: rgb(213, 0, 117) 0px 2px 0px 0px;
  }
}

@media (pointer: coarse) {
  .c5:active {
    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
    background-color: rgb(213, 0, 117);
    color: rgb(255, 255, 255);
  }
}

@media (pointer: fine) {
  .c5:hover {
    background-color: rgb(213, 0, 117);
    color: rgb(255, 255, 255);
  }
}

<div
  class="c0 c1 field field--tooltips field--tooltips-1 field--block month-selector"
  data-role="month-selector"
>
  <div
    class="c2 field__select"
    data-role="month-selector-control"
  >
    <div
      class="c3 field__select-wrapper"
      data-role="month-selector-wrapper"
    >
      <select
        class="c4 field__selectTitle"
        data-role="month-selector-input"
      >
        <option
          class="c5 field__selectOption"
          data-role="month-selector-option"
          value="0"
        >
          January
        </option>
        <option
          class="c5 field__selectOption"
          data-role="month-selector-option"
          value="1"
        >
          February
        </option>
        <option
          class="c5 field__selectOption"
          data-role="month-selector-option"
          value="2"
        >
          March
        </option>
        <option
          class="c5 field__selectOption"
          data-role="month-selector-option"
          value="3"
        >
          April
        </option>
        <option
          class="c5 field__selectOption"
          data-role="month-selector-option"
          value="4"
        >
          May
        </option>
        <option
          class="c5 field__selectOption"
          data-role="month-selector-option"
          value="5"
        >
          June
        </option>
        <option
          class="c5 field__selectOption"
          data-role="month-selector-option"
          value="6"
        >
          July
        </option>
        <option
          class="c5 field__selectOption"
          data-role="month-selector-option"
          value="7"
        >
          August
        </option>
        <option
          class="c5 field__selectOption"
          data-role="month-selector-option"
          value="8"
        >
          September
        </option>
        <option
          class="c5 field__selectOption"
          data-role="month-selector-option"
          value="9"
        >
          October
        </option>
        <option
          class="c5 field__selectOption"
          data-role="month-selector-option"
          value="10"
        >
          November
        </option>
        <option
          class="c5 field__selectOption"
          data-role="month-selector-option"
          value="11"
        >
          December
        </option>
      </select>
      <span
        aria-hidden="true"
        class="c6 field__select-arrow"
      />
    </div>
    Test Tooltip
  </div>
</div>
`;

exports[`com.mgmtp.a12.widgets.input.month-selector > rendering with tooltip in new line 1`] = `
.c1 {
  box-sizing: border-box;
  flex-grow: 1;
  width: 100%;
}

.c4 {
  appearance: none;
  background-color: inherit;
  border-width: medium;
  border-style: none;
  border-color: currentcolor;
  border-image: initial;
  border-radius: 0px;
  caret-color: transparent;
  color: inherit;
  font-size: inherit;
  flex-grow: 1;
  font-style: inherit;
  font-weight: inherit;
  font-family: inherit;
  height: 100%;
  padding: 0px 32px 0px 12px;
  text-align: inherit;
  text-transform: inherit;
  width: 100%;
  cursor: pointer;
}

.c4.c4.c4 {
  outline: transparent solid 1px;
}

.c4::selection {
  background-color: transparent;
}

.c4::placeholder {
  font-style: italic;
  color: rgb(89, 102, 115);
  opacity: 1;
}

.c0[class*="h_"] .c7.c7 {
  background-color: inherit !important;
}

.c2 {
  background-color: transparent;
  box-shadow: none;
  border-width: medium;
  border-style: none;
  border-color: currentcolor;
  border-image: initial;
  border-radius: 0px;
  color: rgb(77, 77, 77);
  display: flex;
  font-family: "Open Sans", sans-serif;
  font-size: 0.75rem;
  font-weight: 400;
  height: 32px;
}

.c2:focus {
  outline: none;
}

.c3 {
  background-color: rgb(241, 242, 244);
  border-radius: inherit;
  box-shadow: rgb(89, 102, 115) 0px 1px 0px 0px;
  display: flex;
  flex-grow: 1;
  position: relative;
}

.c3:focus-within {
  box-shadow: rgb(213, 0, 117) 0px 2px 0px 0px;
  outline-offset: 0px;
  outline: rgb(51, 51, 51) dotted 1px;
}

.c6::after {
  align-items: center;
  color: rgb(127, 140, 155);
  content: "";
  display: flex;
  font-family: "Material Symbols Outlined";
  font-variation-settings: "FILL" 1, "wght" 400, "GRAD" 0, "opsz" 24;
  font-size: 1.5rem;
  font-style: normal;
  justify-content: center;
  height: 100%;
  line-height: 0;
  pointer-events: none;
  position: absolute;
  right: 0px;
  text-transform: none;
  top: 50%;
  transform: translateY(-50%);
  width: 32px;
  overflow-wrap: normal;
}

.c5 {
  appearance: none;
  font-style: normal;
  color: rgb(77, 77, 77);
  font-size: inherit;
}

.c5:focus {
  border-width: medium;
  border-style: none;
  border-color: currentcolor;
  border-image: initial;
}

@media (pointer: coarse) {
  .c3:active {
    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
    box-shadow: rgb(213, 0, 117) 0px 2px 0px 0px;
  }
}

@media (pointer: fine) {
  .c3:hover {
    box-shadow: rgb(213, 0, 117) 0px 2px 0px 0px;
  }
}

@media (pointer: coarse) {
  .c5:active {
    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
    background-color: rgb(213, 0, 117);
    color: rgb(255, 255, 255);
  }
}

@media (pointer: fine) {
  .c5:hover {
    background-color: rgb(213, 0, 117);
    color: rgb(255, 255, 255);
  }
}

<div
  class="c0 c1 field field--block month-selector"
  data-role="month-selector"
>
  Test Tooltip
  <div
    class="c2 field__select"
    data-role="month-selector-control"
  >
    <div
      class="c3 field__select-wrapper"
      data-role="month-selector-wrapper"
    >
      <select
        class="c4 field__selectTitle"
        data-role="month-selector-input"
      >
        <option
          class="c5 field__selectOption"
          data-role="month-selector-option"
          value="0"
        >
          January
        </option>
        <option
          class="c5 field__selectOption"
          data-role="month-selector-option"
          value="1"
        >
          February
        </option>
        <option
          class="c5 field__selectOption"
          data-role="month-selector-option"
          value="2"
        >
          March
        </option>
        <option
          class="c5 field__selectOption"
          data-role="month-selector-option"
          value="3"
        >
          April
        </option>
        <option
          class="c5 field__selectOption"
          data-role="month-selector-option"
          value="4"
        >
          May
        </option>
        <option
          class="c5 field__selectOption"
          data-role="month-selector-option"
          value="5"
        >
          June
        </option>
        <option
          class="c5 field__selectOption"
          data-role="month-selector-option"
          value="6"
        >
          July
        </option>
        <option
          class="c5 field__selectOption"
          data-role="month-selector-option"
          value="7"
        >
          August
        </option>
        <option
          class="c5 field__selectOption"
          data-role="month-selector-option"
          value="8"
        >
          September
        </option>
        <option
          class="c5 field__selectOption"
          data-role="month-selector-option"
          value="9"
        >
          October
        </option>
        <option
          class="c5 field__selectOption"
          data-role="month-selector-option"
          value="10"
        >
          November
        </option>
        <option
          class="c5 field__selectOption"
          data-role="month-selector-option"
          value="11"
        >
          December
        </option>
      </select>
      <span
        aria-hidden="true"
        class="c6 field__select-arrow"
      />
    </div>
  </div>
</div>
`;

exports[`com.mgmtp.a12.widgets.input.month-selector > rendering with warning state 1`] = `
.c1 {
  box-sizing: border-box;
  flex-grow: 1;
  width: 100%;
}

.c4 {
  appearance: none;
  background-color: inherit;
  border-width: medium;
  border-style: none;
  border-color: currentcolor;
  border-image: initial;
  border-radius: 0px;
  caret-color: transparent;
  color: inherit;
  font-size: inherit;
  flex-grow: 1;
  font-style: inherit;
  font-weight: inherit;
  font-family: inherit;
  height: 100%;
  padding: 0px 32px 0px 12px;
  text-align: inherit;
  text-transform: inherit;
  width: 100%;
  cursor: pointer;
}

.c4.c4.c4 {
  outline: transparent solid 1px;
}

.c4::selection {
  background-color: transparent;
}

.c4::placeholder {
  font-style: italic;
  color: rgb(89, 102, 115);
  opacity: 1;
}

.c0[class*="h_"] .c7.c7 {
  background-color: inherit !important;
}

.c2 {
  background-color: transparent;
  box-shadow: none;
  border-width: medium;
  border-style: none;
  border-color: currentcolor;
  border-image: initial;
  border-radius: 0px;
  color: rgb(77, 77, 77);
  display: flex;
  font-family: "Open Sans", sans-serif;
  font-size: 0.75rem;
  font-weight: 400;
  height: 32px;
}

.c2:focus {
  outline: none;
}

.c3 {
  background-color: rgb(241, 242, 244);
  border-radius: inherit;
  display: flex;
  flex-grow: 1;
  position: relative;
  box-shadow: rgb(175, 121, 2) 0px 1px 0px 0px;
}

.c3:focus-within {
  box-shadow: rgb(213, 0, 117) 0px 2px 0px 0px;
  outline-offset: 0px;
  outline: rgb(51, 51, 51) dotted 1px;
}

.c6::after {
  align-items: center;
  color: rgb(127, 140, 155);
  content: "";
  display: flex;
  font-family: "Material Symbols Outlined";
  font-variation-settings: "FILL" 1, "wght" 400, "GRAD" 0, "opsz" 24;
  font-size: 1.5rem;
  font-style: normal;
  justify-content: center;
  height: 100%;
  line-height: 0;
  pointer-events: none;
  position: absolute;
  right: 0px;
  text-transform: none;
  top: 50%;
  transform: translateY(-50%);
  width: 32px;
  overflow-wrap: normal;
}

.c5 {
  appearance: none;
  font-style: normal;
  color: rgb(77, 77, 77);
  font-size: inherit;
}

.c5:focus {
  border-width: medium;
  border-style: none;
  border-color: currentcolor;
  border-image: initial;
}

@media (pointer: coarse) {
  .c3:active {
    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
    box-shadow: rgb(213, 0, 117) 0px 2px 0px 0px;
  }
}

@media (pointer: fine) {
  .c3:hover {
    box-shadow: rgb(213, 0, 117) 0px 2px 0px 0px;
  }
}

@media (pointer: coarse) {
  .c5:active {
    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
    background-color: rgb(213, 0, 117);
    color: rgb(255, 255, 255);
  }
}

@media (pointer: fine) {
  .c5:hover {
    background-color: rgb(213, 0, 117);
    color: rgb(255, 255, 255);
  }
}

<div
  class="c0 c1 field field--block month-selector"
  data-role="month-selector"
>
  <div
    class="c2 field__select"
    data-role="month-selector-control"
  >
    <div
      class="c3 field__select-wrapper field__select-wrapper--warning"
      data-role="month-selector-wrapper"
    >
      <select
        class="c4 field__selectTitle field__selectTitle--warning"
        data-role="month-selector-input"
      >
        <option
          class="c5 field__selectOption"
          data-role="month-selector-option"
          value="0"
        >
          January
        </option>
        <option
          class="c5 field__selectOption"
          data-role="month-selector-option"
          value="1"
        >
          February
        </option>
        <option
          class="c5 field__selectOption"
          data-role="month-selector-option"
          value="2"
        >
          March
        </option>
        <option
          class="c5 field__selectOption"
          data-role="month-selector-option"
          value="3"
        >
          April
        </option>
        <option
          class="c5 field__selectOption"
          data-role="month-selector-option"
          value="4"
        >
          May
        </option>
        <option
          class="c5 field__selectOption"
          data-role="month-selector-option"
          value="5"
        >
          June
        </option>
        <option
          class="c5 field__selectOption"
          data-role="month-selector-option"
          value="6"
        >
          July
        </option>
        <option
          class="c5 field__selectOption"
          data-role="month-selector-option"
          value="7"
        >
          August
        </option>
        <option
          class="c5 field__selectOption"
          data-role="month-selector-option"
          value="8"
        >
          September
        </option>
        <option
          class="c5 field__selectOption"
          data-role="month-selector-option"
          value="9"
        >
          October
        </option>
        <option
          class="c5 field__selectOption"
          data-role="month-selector-option"
          value="10"
        >
          November
        </option>
        <option
          class="c5 field__selectOption"
          data-role="month-selector-option"
          value="11"
        >
          December
        </option>
      </select>
      <span
        aria-hidden="true"
        class="c6 field__select-arrow"
      />
    </div>
  </div>
</div>
`;
